<resources>
    <string name="app_name">TocAppDiscos</string>
    <string name="BuscarVinilos_editText_hint">¡Busca tu vinilo favorito!</string>
    <string name="BuscarVinilos_boton_texto">Buscar vinilo</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="click_to_login">Toca para iniciar sesión</string>
    <string name="click_to_register">Toca para registrarte</string>
    <string name="BuscarPerfiles_editText_texto">Busca a alguien por su email de usuario</string>
    <string name="BuscarPerfiles_boton_texto">Buscar Perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="vistaVinilo_boton_compartir">Compartir</string>
    <string name="vistaVinilo_boton_añadirLista">Añadir a lista de vinilos</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="description">Descripción</string>
    <string name="bienvenido_a_tocappdiscos_echale_un_ojo_a_las_cosas_que_puedes_hacer">¡Bienvenido a TocAppDiscos! \n\nÉchale un ojo a las cosas que puedes hacer...</string>
    <string name="nombre_editarPerfil">Nombre</string>
    <string name="apellidos_editarPerfil">Apellidos</string>
    <string name="description_editarPerfil">Description</string>
    <string name="email_editarPerfil">Email</string>
    <string name="contrasena_editarPerfil">Contraseña</string>
    <string name="guardar_cambios_but">Guardar Cambios</string>
    <string name="borrar_perfil_but">Borrar Perfil</string>
    <string name="editar_perfil_but">Editar perfil</string>
    <string name="nombre_perfil_propio_ejemplo">Cargando...</string>
    <string name="vistaPerfil_listaVinilos_text">Lista de vinilos</string>
    <string name="editPerfil_done">Usuario correctamente actualizado</string>
    <string name="menuContextual_quitar_de_la_lista">Quitar de la lista</string>
    <string name="menuContextual_ver_vinilo">Ver vinilo</string>
    <string name="fallo_bd_editarPerfil_toast">La base de datos está fallando. ¿Tienes conexión?</string>
    <string name="borrarPerfil_title">¿Borrar perfil?</string>
    <string name="borrarPerfil_mensaje">¿Seguro que quieres borrar este perfil? Esta acción no puede deshacerse</string>
    <string name="borrarPerfil_cancelar">¡No! Cancelar</string>
    <string name="borrarPerfil_confirmar">Sí, hazlo</string>
    <string name="email_guardarCambios_error">El email es necesario</string>
    <string name="name_guardarCambios_error">El nombre es necesario</string>
    <string name="lastname_guardarCambios_error">El apellido es necesario</string>
    <string name="descripcion_guardarCambios_error">La descripción es necesaria</string>
    <string name="titulo_busqueda">Resultados de la búsqueda:  </string>
    <string name="login_empty_emailOrPass_toast">Introduce el email y la contraseña</string>
    <string name="login_success_toast">Autenticación exitosa</string>
    <string name="login_fail_toast">La autenticación falló</string>
    <string name="emptyUser_buscarPerfiles_toast">Por favor, introduce un email de usuario</string>
    <string name="usuarioNoEncontrado_buscarPerfiles_toast">Este perfil no existe, ¿estás escribiéndolo bien?</string>
    <string name="fallo_bd_buscarPerfiles_toast">Hay algún error en la base de datos... No puedo buscar esto.</string>
    <string name="emptyVinilo_buscarVinilos_toast">Por favor, introduce un vinilo</string>
    <string name="autores_acercaDe">Autores: \n Fernando Seara Romera\n Sergio Marcos Vázquez\nPedro Pazos Curra\nEduardo Perez Fraguela</string>
    <string name="salir_de_acercaDe">OK</string>
    <string name="emptyFields_register_toast">Rellena todos los campos</string>
    <string name="registroSuccess_toast">Registro exitoso</string>
    <string name="registerFailed_toast">Registro falló</string>
    <string name="fallo_imagenesColeccion_toast">La BD falla recogiendo las imágenes de tu colección.</string>
    <string name="falloBD_vistaPerfil_toast">La base de datos está fallando. ¿Tienes conexión?</string>
    <string name="falloImagenesColeccionAjena_toast">La BD falla recogiendo algunas imágenes de esta colección.</string>
    <string name="viniloEliminado_snackbar">Vinilo eliminado correctamente</string>
    <string name="deshacer_eliminarVinilo_snackbar">Deshacer</string>
    <string name="errorBD_borrarVinilo_toast">Hay algún error. No puedo borrar este vinilo de tu colección</string>
    <string name="genero_vistaVinilo">Género:</string>
    <string name="sello_vistaVinilo">Sello:</string>
    <string name="añadirVinilo_vistaVinilo_toast">Elemento añadido a tu colección correctamente</string>
    <string name="viniloEnColeccion_vistaVinilo_toast">Este elemento ya está en tu colección</string>
    <string name="errorBD_vistaVinilo_toast">Hay un problema con la BD. No puedo añadirlo.</string>
    <string name="compartir_texto">Te envío este vinilo desde TocAppDiscos: \n</string>
    <string name="compartir_titulo">Compartir usando...</string>
    <string name="nombre_vinilo_title">Nombre del vinilo</string>
    <string name="artista_vinilo_title">Grupo o artista</string>
    <string name="genero_vinilo_default">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et ante vitae magna aliquam dapibus.</string>
    <string name="sello_vinilo_default">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et ante vitae magna aliquam dapibus.</string>
    <string name="nombre_query_item">Nombre</string>
    <string name="artista_query_item">Artista</string>
    <string name="mensaje_texto">Hola, aquí va a ir la actividad de mensajería instantánea</string>
    <string name="buscar_texto">Buscar</string>
    <string name="mensaje_title">Mensaje</string>
    <string name="buscar_main_title">Buscar</string>
    <string name="mensaje_main_title">Mensaje</string>
    <string name="perfil_menu_title">Perfil</string>
    <string name="acerca_de_menu_title">Acerca de</string>
    <string name="eliminarPerfil_toast">Perfil eliminado correctamente</string>
</resources>