<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Sección de datos de perfil -->
    <LinearLayout
        android:id="@+id/profile_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Foto de perfil -->
        <ImageView
            android:id="@+id/vistaPerfil_foto_perfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sin_foto_perfil"/>

        <!-- Nombre y apellidos -->
        <TextView
            android:id="@+id/vistaPerfil_texto_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/nombre_perfil_propio_ejemplo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- Email -->
        <TextView
            android:id="@+id/vistaPerfil_texto_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <!-- Descripción -->
        <TextView
            android:id="@+id/vistaPerfil_texto_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textColor="@color/cardview_dark_background"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- "Lista de vinilos" text view -->
    <TextView
        android:id="@+id/lista_de_vinilos_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_section"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Sección de vinilos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vinilos_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lista_de_vinilos_textview"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:scrollbars="none"
        android:clipToPadding="false" />


    <!-- Sección de botones para perfil propio -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/vinilos_rv"
        android:gravity="center"
        >

        <Button
            android:id="@+id/edit_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/editar_perfil_but" />

        <Button
            android:id="@+id/logout_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/logout" />

    </LinearLayout>

</RelativeLayout>
</layout>